web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-static/output.txt
[SyntaxError]: Modifier {} order is wrong. (1,17)
1|class X { async static f() {} }
 |               ^
